WorkspaceManagers now attempt to sync from ui
